[tool.poetry]
name = "streamlit-dsp"
version = "0.1.0"
description = ""
authors = ["wrist <stoicheia1986@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.6"
streamlit = "^0.66.0"
soundfile = "^0.10.3"
pyroomacoustics = "^0.4.1"
matplotlib = "^3.3.1"
astor = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
